Revert "Mozilla scrollbar fix attempt."
This reverts commit 0dbdb94b5b04ceb063ec37c104ab8bf8a51158e4.

--- a/css/styles.processed.css
+++ b/css/styles.processed.css
@@ -9,7 +9,6 @@ html {
   -webkit-text-size-adjust: 100%;
   background: #fff;
   color: #666;
-  overflow: -moz-scrollbars-none;
 }
 
 body {
